--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -1365,6 +1365,7 @@ $include-html-global-classes: $include-html-classes;
 
 // Background color for the top bar
 // $topbar-bg-color: $oil;
+$topbar-bg-color: #7299ac;
 // $topbar-bg: $topbar-bg-color;
 
 // Height and margin
@@ -1379,7 +1380,9 @@ $include-html-global-classes: $include-html-classes;
 // $topbar-dropdown-bg: $oil;
 // $topbar-dropdown-link-color: $white;
 // $topbar-dropdown-link-bg: $oil;
+$topbar-dropdown-link-bg: $topbar-bg-color;
 // $topbar-dropdown-link-bg-hover: $oil;
+$topbar-dropdown-link-bg-hover: scale-color($topbar-bg-color, $lightness: -14%);
 // $topbar-dropdown-link-weight: $font-weight-normal;
 // $topbar-dropdown-toggle-size: 5px;
 // $topbar-dropdown-toggle-color: $white;
@@ -1395,9 +1398,13 @@ $include-html-global-classes: $include-html-classes;
 // $topbar-link-hover-lightness: -10%; // Darken by 10%
 // $topbar-link-bg: $topbar-bg;
 // $topbar-link-bg-color-hover: $charcoal;
+$topbar-link-bg-color-hover: scale-color($topbar-bg-color, $lightness: -14%);
 // $topbar-link-bg-hover: $oil;
+$topbar-link-bg-hover: scale-color($topbar-bg-color, $lightness: -14%);
 // $topbar-link-bg-active: $primary-color;
+$topbar-link-bg-active: $topbar-bg-color;
 // $topbar-link-bg-active-hover: scale-color($primary-color, $lightness: -14%);
+$topbar-link-bg-active-hover: scale-color($topbar-bg-color, $lightness: -14%);
 // $topbar-link-font-family: $body-font-family;
 // $topbar-link-text-transform: none;
 // $topbar-link-padding: ($topbar-height / 3);
