Adding content for main page.

--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -1378,6 +1378,7 @@ $topbar-bg-color: #7299ac;
 
 // Style the top bar dropdown elements
 // $topbar-dropdown-bg: $oil;
+$topbar-dropdown-bg: $topbar-bg-color;
 // $topbar-dropdown-link-color: $white;
 // $topbar-dropdown-link-bg: $oil;
 $topbar-dropdown-link-bg: $topbar-bg-color;
