--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -1,8 +1,10 @@
 <!doctype html>
 <html class="no-js" lang="en">
     <head>
+        <title>{{title}}</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="shortcut icon" href="images/nifi16.ico"/>
         <link rel="stylesheet" href="stylesheets/app.css" />
         <script src="assets/js/modernizr.js"></script>
         <script src="assets/js/webfontloader.js"></script>
@@ -10,6 +12,7 @@
     <body>
         {{> topbar}}
         {{> body }}
+        {{> footer}}
         <script src="assets/js/jquery.min.js"></script>
         <script src="assets/js/foundation.js"></script>
         <script src="js/app.js"></script>
