--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -93,7 +93,7 @@ $include-html-global-classes: $include-html-classes;
 
 // We use these to define default font weights
 // $font-weight-normal: normal !default;
-// $font-weight-bold: bold !default;
+$font-weight-bold: bold !default;
 
 // $white       : #FFFFFF;
 // $ghost       : #FAFAFA;
@@ -1380,10 +1380,11 @@ $topbar-bg-color: #7299ac;
 // $topbar-dropdown-bg: $oil;
 $topbar-dropdown-bg: $topbar-bg-color;
 // $topbar-dropdown-link-color: $white;
+$topbar-dropdown-link-color-hover: #eee;
 // $topbar-dropdown-link-bg: $oil;
 $topbar-dropdown-link-bg: $topbar-bg-color;
 // $topbar-dropdown-link-bg-hover: $oil;
-$topbar-dropdown-link-bg-hover: scale-color($topbar-bg-color, $lightness: -14%);
+$topbar-dropdown-link-bg-hover: $topbar-bg-color;
 // $topbar-dropdown-link-weight: $font-weight-normal;
 // $topbar-dropdown-toggle-size: 5px;
 // $topbar-dropdown-toggle-color: $white;
@@ -1396,6 +1397,7 @@ $topbar-dropdown-link-bg-hover: scale-color($topbar-bg-color, $lightness: -14%);
 // $topbar-link-color-active-hover: $white;
 // $topbar-link-weight: $font-weight-normal;
 // $topbar-link-font-size: rem-calc(13);
+$topbar-link-weight: bold;
 // $topbar-link-hover-lightness: -10%; // Darken by 10%
 // $topbar-link-bg: $topbar-bg;
 // $topbar-link-bg-color-hover: $charcoal;
@@ -1417,14 +1419,14 @@ $topbar-link-bg-active-hover: scale-color($topbar-bg-color, $lightness: -14%);
 
 // $topbar-dropdown-label-color: $monsoon;
 // $topbar-dropdown-label-text-transform: uppercase;
-// $topbar-dropdown-label-font-weight: $font-weight-bold;
+$topbar-dropdown-label-font-weight: $font-weight-bold;
 // $topbar-dropdown-label-font-size: rem-calc(10);
 // $topbar-dropdown-label-bg: $oil;
 
 // Top menu icon styles
 // $topbar-menu-link-transform: uppercase;
 // $topbar-menu-link-font-size: rem-calc(13);
-// $topbar-menu-link-weight: $font-weight-bold;
+$topbar-menu-link-weight: $font-weight-bold;
 // $topbar-menu-link-color: $white;
 // $topbar-menu-icon-color: $white;
 // $topbar-menu-link-color-toggled: $jumbo;
