--- a/src/includes/topbar.hbs
+++ b/src/includes/topbar.hbs
@@ -1,4 +1,4 @@
-<div class="sticky">
+<div class="sticky contain-to-grid">
     <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area">
             <li class="name">
