--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,6 +1,8 @@
 @import "settings";
-@import "foundation";
+@import "foundation/components/grid";
+@import "foundation/components/top-bar";
 
+// @import "foundation";
 // Or selectively include components
 // @import
 //   "foundation/components/accordion",
