- continued work on topbar - table styling - added mailing list page - integrated font awesome for icons

--- a/src/includes/topbar.hbs
+++ b/src/includes/topbar.hbs
@@ -19,16 +19,16 @@
                     <a href="#">Project</a>
                     <ul class="dropdown">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">Apache NiFi Blog</a></li>
+                        <li><a href="#"><i class="fa fa-external-link external-link"></i>Apache NiFi Blog</a></li>
                         <li><a href="#">Downloads</a></li>
                         <li><a href="#">Roadmap</a></li>
-                        <li><a href="#">License</a></li>
+                        <li><a href="http://www.apache.org/licenses/LICENSE-2.0"><i class="fa fa-external-link external-link"></i>License</a></li>
                     </ul>
                 </li>
                 <li class="has-dropdown">
                     <a href="#">Documentation</a>
                     <ul class="dropdown">
-                        <li><a href="#">FAQ</a></li>
+                        <li><a href="/docs/faq.html">FAQ</a></li>
                         <li><a href="#">NiFi Overview</a></li>
                         <li><a href="#">User Guide</a></li>
                     </ul>
@@ -36,7 +36,7 @@
                 <li class="has-dropdown">
                     <a href="#">Community</a>
                     <ul class="dropdown">
-                        <li><a href="#">Mailing Lists</a></li>
+                        <li><a href="mailing_lists.html">Mailing Lists</a></li>
                         <li><a href="#">People</a></li>
                     </ul>
                 </li>
@@ -45,17 +45,17 @@
                     <ul class="dropdown">
                         <li><a href="#">Quickstart</a></li>
                         <li><a href="#">Release Guide</a></li>
-                        <li><a href="#">Source</a></li>
-                        <li><a href="#">Issues</a></li>
+                        <li><a href="#"><i class="fa fa-external-link external-link"></i>Source</a></li>
+                        <li><a href="#"><i class="fa fa-external-link external-link"></i>Issues</a></li>
                     </ul>
                 </li>
                 <li class="has-dropdown">
                     <a href="#">ASF Links</a>
                     <ul class="dropdown">
-                        <li><a href="#">Apache Software Foundation</a></li>
-                        <li><a href="#">Sponsorship</a></li>
-                        <li><a href="#">Security</a></li>
-                        <li><a href="#">Thanks</a></li>
+                        <li><a href="#"><i class="fa fa-external-link external-link"></i>Apache Software Foundation</a></li>
+                        <li><a href="#"><i class="fa fa-external-link external-link"></i>Sponsorship</a></li>
+                        <li><a href="#"><i class="fa fa-external-link external-link"></i>Security</a></li>
+                        <li><a href="#"><i class="fa fa-external-link external-link"></i>Thanks</a></li>
                     </ul>
                 </li>
             </ul>
