--- a/src/includes/header.hbs
+++ b/src/includes/header.hbs
@@ -6,15 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="shortcut icon" href="images/nifi16.ico"/>
         <link rel="stylesheet" href="stylesheets/app.css" />
+        <link rel="stylesheet" href="assets/stylesheets/font-awesome.min.css">
         <script src="assets/js/modernizr.js"></script>
         <script src="assets/js/webfontloader.js"></script>
     </head>
     <body>
         {{> topbar}}
-        {{> body }}
-        {{> footer}}
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/foundation.js"></script>
-        <script src="js/app.js"></script>
-    </body>
-</html>
