--- a/src/pages/html/index.hbs
+++ b/src/pages/html/index.hbs
@@ -2,65 +2,62 @@
 title: Apache NiFi
 ---
 
+<div class="large-space"></div>
 <div class="row">
-    <div id="main-title">
-        <div class="medium-6 large-5 columns">
-            <div class="row">
-                <div class="large-12 columns">
-                    <h1 class="nifi-txt">
-                        <span>
-                            Apache <span class="ni">ni</span><span class="fi">fi</span>
-                        </span>
-                    </h1>
-                </div>
-            </div>
-            <div class="row">
-                <div class="large-12 columns">
-                    <p class="nifi description">
-                        is a dataflow system based on the concepts of flow-based programming. It is currently a part of the Apache Incubator.
-                    </p>
-                </div>
+    <div class="medium-6 large-5 columns">
+        <div class="row">
+            <div class="large-12 columns">
+                <h1 id="nifi-landing" class="right-text nifi-txt">
+                    <span>
+                        Apache <span class="ni">ni</span><span class="fi">fi</span>
+                    </span>
+                </h1>
             </div>
         </div>
-        <div class="medium-6 large-7 columns">
-            <img id="flow" src="images/flow.png" alt="NiFi flow"/>
+        <div class="row">
+            <div class="large-12 columns">
+                <p class="right-text description">
+                    is a dataflow system based on the concepts of flow-based programming. It is currently a part of the Apache Incubator.
+                </p>
+            </div>
         </div>
-        <div class="clear"></div>
     </div>
+    <div class="medium-6 large-7 columns">
+        <img id="flow" src="images/flow.png" alt="NiFi flow"/>
+    </div>
+    <div class="clear"></div>
 </div>
-
+<div class="large-space"></div>
 <div class="row">
     <div class="large-12 columns features">
         <h2>Features</h2>
     </div>
 </div>
-
+<div class="medium-space"></div>
 <div class="row">
     <div class="large-12 columns">
-        <div id="features-content">
-            <p class="description">
-                <span class="nifi-txt">Apache <span class="ni">ni</span><span class="fi">fi</span></span> supports
-                powerful and scalable directed graphs of data routing, transformation, and system mediation logic. Some
-                of the high-level capabilities and objectives of Apache NiFi include:
-            </p>
-            <ul>
-                <li>Web-based user interface for seamless experience between design, control, feedback, and monitoring
-                    of data flows
-                </li>
-                <li>Highly configurable along several dimensions of quality of service such as loss tolerant versus
-                    guaranteed delivery, low latency versus high throughput, and priority based queuing
-                </li>
-                <li>Fine-grained data provenance for all data received, forked, joined, cloned, modified, sent, and
-                    ultimately dropped as data reaches its configured end-state
-                </li>
-                <li>Component-based extension model along well defined interfaces enabling rapid development and
-                    effective testing
-                </li>
-                <li>Security: Supports various forms of SSL, SSH, HTTPS for system to system flows and content
-                    encryption/decryption. And SSL, PKI, pluggable authorization for users.
-                </li>
-            </ul>
-        </div>
+        <p class="description">
+            <span class="nifi-txt">Apache <span class="ni">ni</span><span class="fi">fi</span></span> supports
+            powerful and scalable directed graphs of data routing, transformation, and system mediation logic. Some
+            of the high-level capabilities and objectives of Apache NiFi include:
+        </p>
+        <ul>
+            <li>Web-based user interface for seamless experience between design, control, feedback, and monitoring
+                of data flows
+            </li>
+            <li>Highly configurable along several dimensions of quality of service such as loss tolerant versus
+                guaranteed delivery, low latency versus high throughput, and priority based queuing
+            </li>
+            <li>Fine-grained data provenance for all data received, forked, joined, cloned, modified, sent, and
+                ultimately dropped as data reaches its configured end-state
+            </li>
+            <li>Component-based extension model along well defined interfaces enabling rapid development and
+                effective testing
+            </li>
+            <li>Security: Supports various forms of SSL, SSH, HTTPS for system to system flows and content
+                encryption/decryption. And SSL, PKI, pluggable authorization for users.
+            </li>
+        </ul>
     </div>
 </div>
 
