--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -256,7 +256,9 @@ $font-weight-bold: bold !default;
 // $anchor-text-decoration: none;
 // $anchor-text-decoration-hover: none;
 // $anchor-font-color: $primary-color;
+$anchor-font-color: #1e373f;
 // $anchor-font-color-hover: scale-color($primary-color, $lightness: -14%);
+$anchor-font-color: #264c58;
 
 // We use these to style the <hr> element
 // $hr-border-width: 1px;
@@ -271,6 +273,7 @@ $font-weight-bold: bold !default;
 // $list-margin-bottom: $paragraph-margin-bottom;
 // $list-style-position: outside;
 // $list-side-margin: 1.1rem;
+$list-side-margin: 2.0rem;
 // $list-ordered-side-margin: 1.4rem;
 // $list-side-margin-no-bullet: 0;
 // $list-nested-margin: rem-calc(20);
