--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,6 +1,8 @@
 @import "settings";
+@import "foundation/components/type";
 @import "foundation/components/grid";
 @import "foundation/components/top-bar";
+@import "foundation/components/tables";
 
 // @import "foundation";
 // Or selectively include components
@@ -50,6 +52,14 @@ html, html a {
     visibility:hidden;
 }
 
+div.large-space {
+    height: 3em;
+}
+
+div.medium-space {
+    height: 2em;
+}
+
 #logo-top-bar {
     max-width: 27px;
     max-height: 40px;
@@ -61,20 +71,17 @@ html, html a {
     filter: brightness(1.03);
 }
 
-#main-title {
-    margin-top: 3em;
-    margin-bottom: 3em;
-}
-
-h1.nifi-txt {
+#nifi-landing {
     font-size: 4.5em;
-    text-align: right;
 }
 
 .nifi-txt {
-    font-size: larger;
     font-family: 'Oswald', sans-serif;
     font-weight: 500;
+}
+
+span.nifi-txt {
+    font-size: larger;
 }
 
 .ni {
@@ -85,7 +92,7 @@ h1.nifi-txt {
     color: #0F3541;
 }
 
-p.nifi {
+.right-text {
     text-align: right;
 }
 
@@ -105,13 +112,52 @@ div.features {
     background-color: #D9E4E8;
 }
 
-#features-content {
-    margin-top: 2em;
-}
-
 #features-content ul {
     padding-left: 10px;
 }
+
+i.external-link {
+    margin-right: 5px;
+}
+
+/*
+    Tables
+*/
+
+table {
+    background-color: #fefefe;
+    border: 1px solid #ccc;
+    border-left: 6px solid #ccc;
+    color: #555;
+    display: block;
+    margin-bottom: 12px;
+    padding: 5px 8px;
+}
+
+tr td {
+    font-size: 14px;
+    vertical-align:top;
+    text-align:left;
+    padding: 4px;
+    border-width: 0;
+}
+
+tr th {
+    font-size: 16px;
+    vertical-align:top;
+    text-align:left;
+    padding: 4px;
+    border-width: 0;
+    white-space: nowrap;
+}
+
+table tr:nth-of-type(even) {
+    background-color: transparent !important;
+}
+
+/*
+    Footer
+*/
 
 div.footer {
     margin-top: 2em;
