- adding additional pages

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -60,6 +60,10 @@ div.medium-space {
     height: 2em;
 }
 
+div.small-space {
+    height: 1em;
+}
+
 #logo-top-bar {
     max-width: 27px;
     max-height: 40px;
