--- a/src/includes/topbar.hbs
+++ b/src/includes/topbar.hbs
@@ -18,8 +18,8 @@
                 <li class="has-dropdown">
                     <a href="#">Project</a>
                     <ul class="dropdown">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#"><i class="fa fa-external-link external-link"></i>Apache NiFi Blog</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="https://blogs.apache.org/nifi/"><i class="fa fa-external-link external-link"></i>Apache NiFi Blog</a></li>
                         <li><a href="#">Downloads</a></li>
                         <li><a href="#">Roadmap</a></li>
                         <li><a href="http://www.apache.org/licenses/LICENSE-2.0"><i class="fa fa-external-link external-link"></i>License</a></li>
@@ -28,7 +28,7 @@
                 <li class="has-dropdown">
                     <a href="#">Documentation</a>
                     <ul class="dropdown">
-                        <li><a href="/docs/faq.html">FAQ</a></li>
+                        <li><a href="faq.html">FAQ</a></li>
                         <li><a href="#">NiFi Overview</a></li>
                         <li><a href="#">User Guide</a></li>
                     </ul>
@@ -37,7 +37,7 @@
                     <a href="#">Community</a>
                     <ul class="dropdown">
                         <li><a href="mailing_lists.html">Mailing Lists</a></li>
-                        <li><a href="#">People</a></li>
+                        <li><a href="people.html">People</a></li>
                     </ul>
                 </li>
                 <li class="has-dropdown">
@@ -45,17 +45,17 @@
                     <ul class="dropdown">
                         <li><a href="#">Quickstart</a></li>
                         <li><a href="#">Release Guide</a></li>
-                        <li><a href="#"><i class="fa fa-external-link external-link"></i>Source</a></li>
-                        <li><a href="#"><i class="fa fa-external-link external-link"></i>Issues</a></li>
+                        <li><a href="https://git-wip-us.apache.org/repos/asf/incubator-nifi.git"><i class="fa fa-external-link external-link"></i>Source</a></li>
+                        <li><a href="https://issues.apache.org/jira/browse/NIFI"><i class="fa fa-external-link external-link"></i>Issues</a></li>
                     </ul>
                 </li>
                 <li class="has-dropdown">
                     <a href="#">ASF Links</a>
                     <ul class="dropdown">
-                        <li><a href="#"><i class="fa fa-external-link external-link"></i>Apache Software Foundation</a></li>
-                        <li><a href="#"><i class="fa fa-external-link external-link"></i>Sponsorship</a></li>
-                        <li><a href="#"><i class="fa fa-external-link external-link"></i>Security</a></li>
-                        <li><a href="#"><i class="fa fa-external-link external-link"></i>Thanks</a></li>
+                        <li><a href="http://www.apache.org"><i class="fa fa-external-link external-link"></i>Apache Software Foundation</a></li>
+                        <li><a href="http://www.apache.org/foundation/sponsorship.html"><i class="fa fa-external-link external-link"></i>Sponsorship</a></li>
+                        <li><a href="http://www.apache.org/security/"><i class="fa fa-external-link external-link"></i>Security</a></li>
+                        <li><a href="http://www.apache.org/foundation/thanks.html"><i class="fa fa-external-link external-link"></i>Thanks</a></li>
                     </ul>
                 </li>
             </ul>
